--- a/contact.html
+++ b/contact.html
@@ -10,11 +10,11 @@
             <h1>Travel Your Way</h1>
             <ul>
                 <li><a href="./travel_recommendation_home.html">Home</a></li>
-                <li><a href="./travel_recommendation_home.html">About Us</a></li>
-                <li><a href="./contact.html">Contact</a></li>            
+                <li><a href="./aboutus.html">About Us</a></li>
+                <li><a href="./contact.html">Contact Us</a></li>            
             </ul>
         </nav>
-        <h1>Contact Us</h1>
+        <h1>CONTACT US</h1>
         <form>
             <label for="name">Name</label><br>
             <input type="text" id="name" name="name"><br>
