--- a/travel_recommendation_home.html
+++ b/travel_recommendation_home.html
@@ -10,12 +10,12 @@
             <h1>Travel Your Way</h1>
             <ul>
                 <li><a href="./travel_recommendation_home.html">Home</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="./contact.html">Contact</a></li>            
+                <li><a href="aboutus.html">About Us</a></li>
+                <li><a href="./contact.html">Contact Us</a></li>            
             </ul>
         </nav>
-        <h1>Explore Dream Destination</h1>
+        <h1>EXPLORE DREAM DESTINATION</h1>
         <p>Explore curated travel recommendations, inspiring destinations, hidden gems, and smart tips designed to help you plan memorable journeys tailored to your interests.</p>
-        
+
     </body>
 </html>
