application almost ready

--- a/aboutus.html
+++ b/aboutus.html
@@ -13,6 +13,13 @@
                 <li><a href="./aboutus.html">About Us</a></li>
                 <li><a href="./contact.html">Contact Us</a></li>            
             </ul>
+            <div class="search-container">
+                <input type="text" id="searchInput" placeholder="Enter destination or keyword">
+                <div class="button-group">
+                    <button class="search-btn" id="searchBtn">Search</button>
+                    <button class="reset-btn" id="resetBtn">Reset</button>
+                </div>
+            </div>
         </nav>
         <h1>ABOUT US</h1>
         <p>Welcome to our travel recommendation platform, where every journey begins with inspiration. We help you discover destinations perfectly suited to your interests through personalized suggestions, local insights, and trusted recommendations. Our goal is to make travel planning effortless, exciting, and memorable, so you can explore the world with confidence and joy.</p>
