--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,13 @@
                 <li><a href="./aboutus.html">About Us</a></li>
                 <li><a href="./contact.html">Contact Us</a></li>            
             </ul>
+            <div class="search-container">
+                <input type="text" id="searchInput" placeholder="Enter destination or keyword">
+                <div class="button-group">
+                    <button class="search-btn" id="searchBtn">Search</button>
+                    <button class="reset-btn" id="resetBtn">Reset</button>
+                </div>
+            </div>
         </nav>
         <h1>CONTACT US</h1>
         <form>
