--- a/travel_recommendation_home.html
+++ b/travel_recommendation_home.html
@@ -13,6 +13,13 @@
                 <li><a href="aboutus.html">About Us</a></li>
                 <li><a href="./contact.html">Contact Us</a></li>            
             </ul>
+            <div class="search-container">
+                <input type="text" id="searchInput" placeholder="Enter destination or keyword">
+                <div class="button-group">
+                    <button class="search-btn" id="searchBtn">Search</button>
+                    <button class="reset-btn" id="resetBtn">Reset</button>
+                </div>
+            </div>
         </nav>
         <h1>EXPLORE DREAM DESTINATION</h1>
         <p>Explore curated travel recommendations, inspiring destinations, hidden gems, and smart tips designed to help you plan memorable journeys tailored to your interests.</p>
