--- a/contact.html
+++ b/contact.html
@@ -13,22 +13,15 @@
                 <li><a href="./aboutus.html">About Us</a></li>
                 <li><a href="./contact.html">Contact Us</a></li>            
             </ul>
-            <div class="search-container">
-                <input type="text" id="searchInput" placeholder="Enter destination or keyword">
-                <div class="button-group">
-                    <button class="search-btn" id="searchBtn">Search</button>
-                    <button class="reset-btn" id="resetBtn">Reset</button>
-                </div>
-            </div>
         </nav>
         <h1>CONTACT US</h1>
         <form>
             <label for="name">Name</label><br>
-            <input type="text" id="name" name="name"><br>
+            <input type="text" id="name" name="name" style="width:400px; height:10px;"><br>
             <label for="email">Email</label><br>
-            <input type="email" id="email" name="email"><br>
+            <input type="email" id="email" name="email" style="width:400px; height:10px;"><br>
             <label for="message">Message</label><br>
-            <input type="text" id="message" name="message"><br>
+            <input type="text" id="message" name="message" style="width:400px; height:10px;"><br>
             <input type="submit" value="Submit">
         </form>
     </body>
