--- a/aboutus.html
+++ b/aboutus.html
@@ -20,25 +20,24 @@
                     <button class="reset-btn" id="resetBtn">Reset</button>
                 </div>
             </div>
+            <div id="results"></div>
+        <script src="./travel_recommendation.js"></script>
         </nav>
         <h1>ABOUT US</h1>
-        <p>Welcome to our travel recommendation platform, where every journey begins with inspiration. We help you discover destinations perfectly suited to your interests through personalized suggestions, local insights, and trusted recommendations. Our goal is to make travel planning effortless, exciting, and memorable, so you can explore the world with confidence and joy.</p>
-        <h2>Our Team</h2>
+        <p class="discription">Welcome to our travel recommendation platform, where every journey begins with inspiration. We help you discover destinations perfectly suited to your interests through personalized suggestions, local insights, and trusted recommendations. Our goal is to make travel planning effortless, exciting, and memorable, so you can explore the world with confidence and joy.</p>
         <ul>
+            <h2>Our Team</h2>
             <li class="team">
                 <h4>Janvi Minda</h4>
-                <p>Our CEO Janvi is a passionate and visionary leader dedicated to innovation, guiding our platform to deliver inspiring and personalized travel experiences worldwide.</p><br>
-                <p class="position">CEO</p>
+                <p>Our <b>CEO</b> Janvi is a passionate and visionary leader dedicated to innovation, guiding our platform to deliver inspiring and personalized travel experiences worldwide.</p><br>
             </li>
             <li class="team">
                 <h4>Vincy Jain</h4>
-                <p>Our CMO drives creative vision and brand strategy, connecting travelers with our platform through impactful storytelling, engagement, and meaningful experiences.</p><br>
-                <p class="position">CMO</p>
+                <p>Our <b>CMO</b> drives creative vision and brand strategy, connecting travelers with our platform through impactful storytelling, engagement, and meaningful experiences.</p><br>
             </li>
             <li class="team">
                 <h4>Nandika Dotiya</h4>
-                <p>Our CFO ensures strong financial strategy and sustainable growth, supporting innovation while maintaining transparency, stability, and long-term value for our platform.</p><br>
-                <p class="position">CFO</p>
+                <p>Our <b>CFO</b> ensures strong financial strategy and sustainable growth, supporting innovation while maintaining transparency, stability, and long-term value for our platform.</p><br>
             </li>
         </ul>
     </body>
