--- a/travel_recommendation_home.html
+++ b/travel_recommendation_home.html
@@ -19,10 +19,11 @@
                     <button class="search-btn" id="searchBtn">Search</button>
                     <button class="reset-btn" id="resetBtn">Reset</button>
                 </div>
+                <div id="results"></div>
+        <script src="./travel_recommendation.js"></script>
             </div>
         </nav>
         <h1>EXPLORE DREAM DESTINATION</h1>
-        <p>Explore curated travel recommendations, inspiring destinations, hidden gems, and smart tips designed to help you plan memorable journeys tailored to your interests.</p>
-
+        <p class="discription">Step into a world of endless exploration and unforgettable experiences as you discover destinations that inspire wonder and excitement. From sun-kissed beaches and spiritually enriching temples to culturally rich countries filled with history and tradition, each recommendation is thoughtfully curated to match your travel interests. Whether you seek relaxation, adventure, or cultural immersion, explore places that turn your travel dreams into meaningful journeys and lifelong memories.</p>
     </body>
 </html>
